--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,25 @@ color: #FFFFFF;
 
     /* переваги */
 
+.preference .items::before{
+    display: block;
+    content:"";
+   
+    height: 120px;
+    outline: 1px solid red;
+/* background-image: url(../imges/icons.svg/astronaut\ 1\ \(1\).svg); */
+background-size: contain;
+background-repeat: no-repeat;
+background-position: center;
+
+
+}
+
+.preference .items:nth-child(3)::before{
+    background-image: url(../imges/icons.svg/astronaut\ 1\ \(1\).svg);
+}
+
+
 .section{
     margin-bottom: 94px;
 }
@@ -243,8 +262,8 @@ color: var(--title-tekst-color);
 }
 
     .preference .items +.items{
-        margin-left: 50px;
-        /* background-color: tomato; */ 
+        margin-left: 30px;
+         /* background-color: tomato;  */
        }
 
     .preference .title {
