--- a/css/style.css
+++ b/css/style.css
@@ -364,19 +364,32 @@ letter-spacing: 0.03em;
 color:var(--primery-text-color);
 border-bottom: 2px solid  #F5F4FA;;
     }
-.icon-member {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.item-member {
+   .members .icon-member {
+       display: flex;
+justify-content: center;
+align-items: center;
+    }
+
+.members .item-member {
 
     width: 44px;
     height: 44px;
-    border-radius: 50%;
+    background-color: #2196F3;
     margin-right: 10px;
-    outline: 1 px solid red;
+    border-radius: 50%;
+
+}
+
+.members .item-member:last-child{
+    margin-right: 0px;
+}
+.item-member .member-link{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
