--- a/css/style.css
+++ b/css/style.css
@@ -422,8 +422,45 @@ align-items: center;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+/* Постійні слієнти */
+.clients {
+    display: flex;
+   justify-items: center;
+   align-items: center;
+}
 
+.clients .client-item{
+    width: 170px;
+    height: 92px;
+    background-color:#F5F5F5;
+    margin-right: 30px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+}
+ 
+.clients .client-item:last-child{
+    margin-right: 0px;
+}
 
+.clients .client-item:hover{
+    border: 1px solid var(--accent-color);
+cursor:pointer
+}
+.client-item .icon-client{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 23px 64px;
+
+}
+.section-clients{
+    padding-bottom: 94px;
+background-color #F5F5F5;
+}
+
+.clients .client-item:hover.icon-client {
+    fill: #FFFFFF;
+}
 /* футер */
 .footer {
     
