--- a/css/style.css
+++ b/css/style.css
@@ -423,13 +423,12 @@ align-items: center;
 }
 
 /* Постійні слієнти */
-.clients {
+.clients { 
     display: flex;
    justify-items: center;
    align-items: center;
 }
-
-.clients .client-item{
+ .clients .client-item {
     width: 170px;
     height: 92px;
     background-color:#F5F5F5;
@@ -437,30 +436,40 @@ align-items: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
 }
- 
-.clients .client-item:last-child{
+ .clients .client-item:last-child{
     margin-right: 0px;
 }
-
-.clients .client-item:hover{
-    border: 1px solid var(--accent-color);
-cursor:pointer
-}
-.client-item .icon-client{
+.client-item .client-link{
+    width: 100%;
+    height: 100%;
     display: flex;
+    background-color:#F5F5F5;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+}
+
+.client-item .icon-client{
+        display: flex;
     justify-content: center;
     align-items: center;
-    margin: 23px 64px;
+    margin: 16px 32px;}
 
+ .client-item .client-link:hover{
+border: 1px solid var(--accent-color);
+cursor:pointer
+
+}
+
+.client-item .client-link:hover .icon-client {
+    fill: var(--accent-color);
 }
 .section-clients{
+    padding-top: 94px;
     padding-bottom: 94px;
-background-color #F5F5F5;
+background-color: #F5F5F5;
 }
 
-.clients .client-item:hover.icon-client {
-    fill: #FFFFFF;
-}
+
 /* футер */
 .footer {
     
