--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,9 @@ align-items: center;
         display: flex;
     justify-content: center;
     align-items: center;
-    margin: 16px 32px;}
+    margin: 16px 32px;
+    fill: #AFB1B8; 
+}
 
  .client-item .client-link:hover{
 border: 1px solid var(--accent-color);
