--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,47 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6); 
 }
+.footer {
+    display: flex;
+}
+
+/* приєднатися */
+  .addition {
+    margin-right: 640px;
+  }
+.add {
+     /* margin-right: 868px;  */
+    font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+color: #FFFFFF
+}
+ 
+ .addition-list{
+    display: flex;
+       /* margin-bottom: 100px; */
+    /* margin-left:  700px;  */
+
+ }
+.addition-item {
+    width: 44px;
+    height: 44px;
+    margin-right:10px;
+    border-radius: 50%;
+    background-color:#3F404A;
+}
+ .addition-item:hover {
+    background-color:var(--accent-color)
+ 
+ }
+.addition-list .icon-add{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 12px;
+    fill: #FFFFFF;
+}
 
 
 /* ПОРТФОЛІО */
