--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ border-radius: 4px;
 background-size:none;
 background-repeat: no-repeat;
 background-position: center;
-
+margin-bottom: 30px;
 
 }
 
@@ -385,10 +385,11 @@ color:var(--primery-text-color);
 border-bottom: 2px solid  #F5F4FA;;
     }
 
-   .members .icon-member {
-       display: flex;
+   .members .icon-members {
+    display: flex;
 justify-content: center;
 align-items: center;
+
     }
 
 .members .item-member {
@@ -406,11 +407,30 @@ align-items: center;
     background-color: var(--accent-color);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+    
+
 
 
 .members .item-member:last-child{
     margin-right: 0px;
-}
+    }
+
+    .members .icon-members {
+        display: flex;
+    justify-content: center;
+    align-items: center;}
+    
+
+    .item-member .icon-member{
+        fill: #AFB1B8;
+    }
+
+    .item-member .icon-member:hover,
+    .item-member .icon-member:focus
+    {
+fill: #ffffff;
+    }
+
 .item-member .member-link{
     width: 100%;
     height: 100%;
@@ -516,13 +536,14 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6); 
 }
-.footer {
+.footer-conteiner {
     display: flex;
+    
 }
 
 /* приєднатися */
   .addition {
-    margin-right: 640px;
+     margin-right: 640px; 
   }
 .add {
      /* margin-right: 868px;  */
@@ -536,7 +557,7 @@ color: #FFFFFF
  .addition-list{
     display: flex;
        /* margin-bottom: 100px; */
-    /* margin-left:  700px;  */
+     /* margin-left:  700px;    */
 
  }
 .addition-item {
@@ -563,6 +584,15 @@ color: #FFFFFF
 
  .cards-link {
     text-decoration: none;
+ }
+ .cards-link:hover,
+ .cards-link:focus{
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+     1px 4px 6px rgba(0, 0, 0, 0.16);
+
+
  }
 .button-portfolio {
     display: flex;
